# montelibero-multisig

./: .gitignore  Cargo.toml  default.nix  result  shell.nix
montelibero-transactions/: Cargo.toml
montelibero-transactions/src/: account.rs  constants.rs  error.rs  lib.rs  transaction.rs
multisig-service/: Cargo.toml  Rocket.toml
multisig-service/migrations/2021-08-02-215532_setup_schema/: down.sql  up.sql
multisig-service/src/: database.rs  main.rs  schema.rs
multisig-service/static/: main.css
multisig-service/templates/: base.html.hbs  create-tx-response.html.hbs  create-tx.html.hbs  nav.html.hbs  view-tx.html.hbs
nix/: overlay.nix  sources.json
nix/modules/: mtl-multisig.nix
