[package]
name = "montelibero-transactions"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.26"
sha2 = "0.9.5"
hex-literal = "0.3.3"
substrate-stellar-sdk = { git = "https://github.com/ncrashed/substrate-stellar-sdk", rev = "80637af3cf2a7283e67c99543701a6acb75cc87d", features = [ "offchain", "all-types" ] }

# [dependencies.substrate-stellar-sdk]
# # path = "../../substrate-stellar-sdk"
# git = "https://github.com/ncrashed/substrate-stellar-sdk"
# revision = "80637af3cf2a7283e67c99543701a6acb75cc87d"
# features = [ "offchain", "all-types" ]