[package]
name = "multisig-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
montelibero-transactions = { path = "../montelibero-transactions" }
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "31d06ee714c7cdab1911a8cb8fd5f9e148cc201f" }

[dependencies.rocket_dyn_templates]
git = "https://github.com/SergioBenitez/Rocket"
rev = "31d06ee714c7cdab1911a8cb8fd5f9e148cc201f"
features = ["handlebars"]