[package]
name = "multisig-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
montelibero-transactions = { path = "../montelibero-transactions" }
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "31d06ee714c7cdab1911a8cb8fd5f9e148cc201f", features = [ "json" ] }
hex = "0.4.3"
diesel = { version = "1.4.7", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0.26"
serde = "1.0.127"

[dependencies.rocket_dyn_templates]
git = "https://github.com/SergioBenitez/Rocket"
rev = "31d06ee714c7cdab1911a8cb8fd5f9e148cc201f"
features = ["handlebars"]

[dependencies.rocket_sync_db_pools]
git = "https://github.com/SergioBenitez/Rocket"
rev = "31d06ee714c7cdab1911a8cb8fd5f9e148cc201f"
default-features = false
features = ["diesel_sqlite_pool"]
