[package]
name = "multisig-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.7", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
hex = "0.4.3"
montelibero-transactions = { path = "../montelibero-transactions" }
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "31d06ee714c7cdab1911a8cb8fd5f9e148cc201f", features = [ "json" ] }
serde = "1.0.127"
substrate-stellar-sdk = { git = "https://github.com/ncrashed/substrate-stellar-sdk", rev = "80637af3cf2a7283e67c99543701a6acb75cc87d", features = [ "offchain", "all-types" ] }
thiserror = "1.0.26"
tokio = { version = "1.0", features = ["full"] }


[dependencies.rocket_dyn_templates]
git = "https://github.com/SergioBenitez/Rocket"
rev = "31d06ee714c7cdab1911a8cb8fd5f9e148cc201f"
features = ["handlebars"]

[dependencies.rocket_sync_db_pools]
git = "https://github.com/SergioBenitez/Rocket"
rev = "31d06ee714c7cdab1911a8cb8fd5f9e148cc201f"
default-features = false
features = ["diesel_sqlite_pool"]
